--- a/ScadeSuiteWeb.Client/Editor/SuiteEditor.razor
+++ b/ScadeSuiteWeb.Client/Editor/SuiteEditor.razor
@@ -50,7 +50,7 @@
     <FluentMultiSplitterPane Size="15%" Min="50px" Max="70%">
         @if (Pj is not null)
         {
-            <LeftMenu Project="@Pj.Project" ProjectName="@Pj.Name"/>
+            <LeftMenu Project="@Pj" />
         }
     </FluentMultiSplitterPane>
 
