fix id and RightProperty.razor

--- a/ScadeSuiteWeb.Client/Editor/SuiteEditor.razor
+++ b/ScadeSuiteWeb.Client/Editor/SuiteEditor.razor
@@ -96,7 +96,7 @@
 
     @* 右 panle index 2 *@
     <FluentMultiSplitterPane Size="20%">
-        Properties
+        <RightProperty />
     </FluentMultiSplitterPane>
 
 </FluentMultiSplitter>
